[gd_scene load_steps=2 format=3 uid="uid://copccis0sghma"]

[ext_resource type="Script" path="res://ui/Overlays/InventoryOverlay/Slot/Slot.gd" id="1_g45kc"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_g45kc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.517647, 0.517647, 0.517647, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ItemTexture" type="TextureRect" parent="ColorRect/MarginContainer/ColorRect/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ItemName" type="Label" parent="ColorRect/MarginContainer/ColorRect/MarginContainer/ItemTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_right = 18.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="ItemQuantity" type="Label" parent="ColorRect/MarginContainer/ColorRect/MarginContainer/ItemTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
text = "0"
horizontal_alignment = 2
vertical_alignment = 2
